# uv-playground

./: .dockerignore  .gitignore  justfile  pyproject.toml
apps/fp-studio/: Dockerfile  pyproject.toml
apps/fp-studio/src/fp_studio/: app.py  namer.py
apps/fp-studio/tests/: test_namer.py
apps/pta-consumer/: pyproject.toml
apps/pta-consumer/src/pta_consumer/: formatter.py  main.py
apps/pta-consumer/tests/: test_formatter.py
