[project]
name = "uvibomby"
version = "0.1.0"
requires-python = ">=3.14"

[tool.uv]
package = false

[dependency-groups]
lint = [
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
test = [
    "pytest>=8",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
]

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]
