[project]
name = "uvibomby"
version = "0.1.0"
requires-python = ">=3.14"

[tool.uv]
package = false

[dependency-groups]
lint = [
    "deptry>=0.25.1",
    "ruff>=0.15.11",
    "ty>=0.0.32",
]
test = [
    "pytest>=8",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "rust-just>=1.50.0",
]

[tool.uv.workspace]
members = [
    "packages/*",
    "apps/*",
]

[tool.uv.sources]
pta-shared = { workspace = true }

